cherokeeiconsdir = "$(prefix)/share/cherokee/icons/"
cherokeeicons_DATA = \
back.png \
binary.png \
blank.png \
bomb.png \
compressed.png \
folder.png \
image.png \
movie.png \
pdf.png \
ps.png \
readme.png \
script.png \
sound.png \
tex.png \
text.png \
iso.png \
java.png \
unknown.png

EXTRA_DIST = \
$(cherokeeicons_DATA)
