## Cherokee: icons/Makefile.am  -*- makefile -*-

LICENSE = \
README.txt

cherokeeiconsdir = "$(prefix)/share/cherokee/icons/"
cherokeeicons_DATA = \
$(LICENSE) \
arrow_turn_left.png \
blank.png \
bomb.png \
camera.png \
cd.png \
color_wheel.png \
css.png \
cup.png \
film.png \
font.png \
folder.png \
html.png \
music.png \
package.png \
page_white.png \
page_white_acrobat.png \
page_white_actionscript.png \
page_white_c.png \
page_white_go.png \
page_white_office.png \
page_white_php.png \
page_white_text.png \
script.png \
ruby.png \
control_play.png \
email.png \
printer.png

EXTRA_DIST = \
$(cherokeeicons_DATA)
