EXTRA_DIST = \
conf.py \
base.py \
util.py \
pyscgi.py \
fcgi.py \
run-tests.py \
001-basic.py \
002-MissingProtocol.py \
003-UnknownMethod.py \
004-UnknownMethod+MissingProtocol.py \
005-Unknown-Protocol.py \
006-Wrong-Protocol.py \
007-Missing-Host.py \
008-Broken-Request.py \
009-DotDot.py \
010-Dot.py \
011-HeaderEntryTwice.py \
012-Broken-Key.py \
013-Broken-Key2.py \
014-Broken-Key3.py \
015-CGI-simple.py \
016-CGI-pathinfo.py \
017-CGI-pathinfo2.py \
018-CGI-pathinfo3.py \
019-HeadMethod.py \
020-VirtualHost.py \
021-VirtualHost2.py \
022-NoHost.py \
023-Host.py \
024-Host+Port.py \
025-Host-Broken.py \
026-Host-Broken-Dot.py \
027-Missing-File.py \
028-Missing-File+Param.py \
029-Post+Without-lenght.py \
030-Post+urlencoded.py \
031-Post+urlencoded2.py \
032-DirIndex+Redir.py \
033-DirIndex.py \
034-DirIndex2.py \
035-PHP-simple.py \
036-DocumentRoot-common.py \
037-PHP-post.py \
038-PHP-get.py \
039-Auth-Basic.py \
040-Auth-Basic2.py \
041-Auth-Basic3.py \
042-Pipelining.py \
043-Pipelining2.py \
044-Home.py \
045-Home2.py \
046-Redir.py \
047-Redir2.py \
048-NN.py \
049-NN-broken.py \
050-HeadBody.py \
051-10kRandom.py \
052-50kRandom.py \
053-100kRandom.py \
054-ContentRange.py \
055-ContentRange2.py \
056-ContentRange3.py \
057-ContentRange4.py \
058-ContentRange-Double.py \
059-ContentRange-Double2.py \
060-BigPost.py \
061-PAM.py \
062-PAM2.py \
063-DocumentRoot.py \
064-DirectoryIndex.py \
065-DirectoryIndex2.py \
066-DirectoryIndex3.py \
067-PathInfo.py \
068-PathInfo2.py \
069-PathInfo3.py \
070-Inherit.py \
071-Inherit2.py \
072-Inherit3.py \
073-Access.py \
074-Access2.py \
075-AccessRange.py \
076-AccessRange2.py \
077-AccessRange3.py \
078-AccessAny.py \
079-Extension.py \
080-Extension2.py \
081-DocumentRoot-Common-index.py \
082-Auth-header.py \
083-RedirParam.py \
084-RedirParamShow.py \
085-AuthUsers.py \
086-AuthUsers2.py \
087-Location.py \
088-CGI-envs.py \
089-gzip-encoding.py \
090-Digest.py \
091-Digest2.py \
092-Digest3.py \
093-InvalidLinks.py \
094-URL-request.py \
095-htpasswd-apache-md5.py \
096-htpasswd-md5.py \
097-htpasswd-sha1.py \
098-htpasswd-crypt.py \
099-htpasswd-plain.py \
100-Digest-htdigest.py \
101-HugePost.py \
102-QueryString.py \
103-ScriptName.py \
104-ScriptAlias_PathInfo.py \
105-If-Range.py \
106-If-Range2.py \
107-Priority1.py \
108-Priority2.py \
109-Priority3.py \
110-Priority4.py \
111-Compac.py \
112-NiceError-CGI.py \
113-HeaderFile.py \
114-HeaderFile2.py \
115-Respin.py \
116-RequestTiny.py \
117-DomainToDir.py \
118-Request-redir.py \
119-Dotdot2.py \
120-Dotdot3.py \
121-NoUserDir.py \
122-Methods.py \
123-ImplicitRedit.py \
124-DomainToDir2.py \
125-domain-redir1.py \
126-SCGI.py \
127-SCGI-Post.py \
128-ValidMethod-common.py \
129-Basic-EmptyPasswd.py \
130-Digest-EmptyPasswd.py \
131-ChangeUser-phpcgi.py \
132-file-ContentType.py \
133-If-None-Match.py \
134-HTTP_headers.py \
135-RedirParams.py \
136-BadRange.py \
137-Mime1.py \
138-ChangeUser-cgi.py \
139-domain-wildcards1.py \
140-SCGI-EmptyVars.py \
141-FastCGI-EmptyVars.py \
142-SCGI-ExtraVars.py \
143-ContentRange-NoIO.py \
144-ContentRange2-NoIO.py \
145-ContentRange3-NoIO.py \
146-ContentRange4-NoIO.py \
147-ContentRange-Double-NoIO.py \
148-ContentRange-Double2-NoIO.py \
149-Common-PathInfo.py \
150-Common-No-PathInfo.py \
151-SCGI-vars.py \
152-SCGI-vars2.py \
153-SCGI-vars-root.py \
154-DirRedirection.py \
155-DirRedirection2.py \
156-Mime2.py \
157-Dirlist-symlinks.py \
158-RuleHeader1.py \
159-RuleHeader2.py \
160-RuleNot1.py \
161-RuleNot2.py \
162-RuleAnd1.py \
163-RuleAnd2.py \
164-RuleOr1.py \
165-RuleOr2.py \
166-xsendfile1.py \
167-RuleGeoIP.py \
168-Deflate-Encoding.py \
169-Pipermail.py \
170-Error-ContentLength.py \
171-SCGI-Keepalive.py \
172-Chunked-CGI.py \
173-Chunked-SCGI.py

test:
	./run-tests.py
