## Cherokee: admin/icons/Makefile.am  -*- makefile -*-

cherokeeiconsdir = "$(datadir)/cherokee/admin/icons"
cherokeeicons_DATA = \
cherokee-admin-launcher-16.png \
cherokee-admin-launcher-32.png \
cherokee-admin-launcher-48.png \
cherokee-admin-launcher-96.png \
cherokee-admin-launcher-128.png \
cherokee-admin-launcher-256.png \
cherokee-admin-launcher-512.png \
cherokee-admin-launcher.svg

EXTRA_DIST = \
$(cherokeeicons_DATA)
