## Cherokee: Makefile.am  -*- makefile -*-

code = \
__init__.py \
Install.py \
InstallUtil.py \
Install_Log.py \
Menu.py \
PageApp.py \
PageCategory.py \
PageIndex.py \
PageSearch.py \
Report.py \
Review.py \
Library.py \
Util.py \
Maintenance.py \
ows_consts.py \
CommandProgress.py \
Distro.py

marketpydir = "$(datadir)/cherokee/admin/market"
marketpy_DATA = $(code)

EXTRA_DIST = \
$(code)

