## Cherokee: Makefile.am  -*- makefile -*-

adminpluginsdir = "$(datadir)/cherokee/admin/plugins"
adminplugins_DATA = \
admin.py \
authlist.py \
bind.py \
tls.py \
cgi.py \
common.py \
custom_error.py \
dbslayer.py \
directory.py \
dirlist.py \
empty_gif.py \
error_nn.py \
error_redir.py \
evhost.py \
exists.py \
extensions.py \
failover.py \
fcgi.py \
file.py \
from.py \
fullpath.py \
geoip.py \
header.py \
htdigest.py \
htpasswd.py \
ip_hash.py \
ldap.py \
method.py \
mysql.py \
pam.py \
plain.py \
post_report.py \
post_track.py \
proxy.py \
redir.py \
rehost.py \
request.py \
round_robin.py \
rrd.py \
scgi.py \
secdownload.py \
server_info.py \
ssi.py \
streaming.py \
target_ip.py \
url_arg.py \
uwsgi.py \
wildcard.py \
gzip.py \
deflate.py \
drop.py

EXTRA_DIST = \
$(adminplugins_DATA)
