## Cherokee: Makefile.am  -*- makefile -*-

adminwizardsdir = "$(datadir)/cherokee/admin/wizards"
adminwizards_DATA = \
List.py \
\
alfresco.py \
coldfusion.py \
django.py \
drupal.py \
glassfish.py \
hotlinking.py \
icons.py \
joomla.py \
liferay.py \
mailman.py \
moinmoin.py \
mono.py \
phpbb.py \
phpmyadmin.py \
php.py \
rails.py \
redirect.py \
static.py \
streaming.py \
sugar.py \
symfony.py \
trac.py \
uwsgi.py \
wordpress.py \
zend.py

EXTRA_DIST = \
$(adminwizards_DATA)
