## Cherokee: Makefile.am  -*- makefile -*-

adminwizardsdir = "$(datadir)/cherokee/admin/wizards"
adminwizards_DATA = \
List.py \
\
alfresco.py \
coldfusion.py \
concrete5.py \
django.py \
drupal.py \
glassfish.py \
hotlinking.py \
icons.py \
joomla.py \
liferay.py \
mailman.py \
mediawiki.py \
moinmoin.py \
mono.py \
moodle.py \
phpbb.py \
phpmyadmin.py \
php.py \
rails.py \
redirect.py \
rtorrent.py \
static.py \
streaming.py \
sugar.py \
symfony.py \
trac.py \
uwsgi.py \
wordpress.py \
zend.py

EXTRA_DIST = \
$(adminwizards_DATA)
