## Cherokee: Makefile.am  -*- makefile -*-

adminwizardsdir = "$(datadir)/cherokee/admin/wizards"
adminwizards_DATA = \
List.py \
\
alfresco.py \
coldfusion.py \
concrete5.py \
django.py \
glassfish.py \
hotlinking.py \
icons.py \
mailman.py \
mono.py \
php.py \
rails.py \
redirect.py \
rtorrent.py \
static.py \
streaming.py \
symfony.py \
uwsgi.py \
zend.py \
flcache.py \
ssl_test.py

EXTRA_DIST = \
$(adminwizards_DATA)
