## Cherokee: Makefile.am  -*- makefile -*-

imagesdir = "$(datadir)/cherokee/admin/CTK/static/images"
images_DATA = \
arrow_ns.png \
bg-dialog-buttonpane.png \
bg-dialog-titlebar-close.gif \
bg-dialog-titlebar.png \
bg-dialog.png \
bg-filter.png \
bg-sel-actions-sel.png \
bg-sel-actions.png \
del-hover.png \
del.png \
dialog-error.png \
dialog-information.png \
dialog-warning.png \
ibutton-slider-default.png \
input-bg.png \
loader.gif \
loading.gif \
off.png \
offline.png \
on.png \
online.png \
tabbg.png \
tick.png \
forbid.png \
ui-bg_gloss-wave_35_f6a828_500x100.png \
ui-bg_highlight-soft_100_eeeeee_1x100.png \
ui-icons_222222_256x240.png \
ui-icons_2e83ff_256x240.png \
ui-icons_454545_256x240.png \
ui-icons_888888_256x240.png \
ui-icons_cd0a0a_256x240.png \
uploadify.cancel.png \
jquery.ui.stars.gif \
carousel-left-arrow.png \
carousel-right-arrow.png

EXTRA_DIST = \
$(images_DATA)
