## Cherokee: Makefile.am  -*- makefile -*-

ctkdir = "$(datadir)/cherokee/admin/CTK/CTK"
ctk_DATA = \
__init__.py \
Box.py \
Button.py \
Checkbox.py \
Combobox.py \
Config.py \
Container.py \
DatePicker.py \
Dialog.py \
Druid.py \
HTTP.py \
Help.py \
HiddenField.py \
Image.py \
Indenter.py \
JS.py \
Link.py \
List.py \
Notice.py \
Page.py \
PageCleaner.py \
Plugin.py \
Post.py \
PropsTable.py \
Proxy.py \
RawHTML.py \
Refreshable.py \
Server.py \
SortableList.py \
Submitter.py \
Tab.py \
Table.py \
Template.py \
TextArea.py \
TextField.py \
ToggleButton.py \
Uploader.py \
Widget.py \
consts.py \
iPhoneToggle.py \
pyscgi.py \
util.py \
json_embedded.py \
ProgressBar.py \
Downloader.py \
Radio.py \
XMLRPCProxy.py \
AjaxUpload.py \
i18n.py \
Init.py \
Paginator.py \
StarRating.py \
Carousel.py \
Collapsible.py \
MailHTML.py

EXTRA_DIST = \
$(ctk_DATA)
