## Cherokee: Makefile.am  -*- makefile -*-

SUBDIRS = flags wizards

DARKGLASS_ICONS = \
online.png \
offline.png \
error.png

SILK_ICONS = \
cross.png \
tick.png \
exclamation.png

adminstaticdir = "$(datadir)/cherokee/admin/static/images"
adminstatic_DATA = \
$(DARKGLASS_ICONS) \
$(SILK_ICONS) \
background.png \
background-nobar.png \
cherokee-logo-bar.png \
top-bar.png \
menu-sep.png \
menu-active.png \
menu-highlight.png \
tab.png \
workarea.png \
help.png \
button-left.png \
button-right.png \
dialog-information.png \
dialog-warning.png \
dialog-error.png \
collapsed.gif \
expanded.gif \
bin.png \
favicon.ico \
macFFBgHack.png \
loadingAnimation.gif \
forbidden.png \
proud.png \
feedback.png \
rulestable-th.png \
arrow_ns.png \
arrow_ns_h.png \
ibutton-slider-default.png

EXTRA_DIST = \
$(adminstatic_DATA)
