## Cherokee: Makefile.am  -*- makefile -*-

SUBDIRS = flags wizards other

adminstaticdir = "$(datadir)/cherokee/admin/static/images"
adminstatic_DATA = \
favicon.ico \
advanced.png \
bg-bar.png \
cherokee-logo-bar.png \
general.png \
home.png \
icons.png \
kid-running.png \
kid-stopped.png \
mime.png \
nav-selected.gif \
nav-sep.png \
sources.png \
status.png \
vservers.png

EXTRA_DIST = \
$(adminstatic_DATA)
