## Cherokee: Makefile.am  -*- makefile -*-

SUBDIRS = flags wizards other

adminstaticdir = "$(datadir)/cherokee/admin/static/images"
adminstatic_DATA = \
advanced.png \
backup.png \
bg-bar.png \
bg-body.png \
bg-help-a.png \
bg-help-span.png \
bg-th.png \
bg-td-even.png \
cherokee-logo-bar.png \
cpu.png \
disk.png \
favicon.ico \
featured-list-bg.png \
featured-list-selected.png \
general.png \
home.png \
host.png \
icons.png \
information.png \
mime.png \
nav-selected.gif \
nav-sep.png \
network.png \
panel-clone.png \
panel-new.png \
ram.png \
remote.png \
sidebar-bg.png \
sources.png \
status.png \
uptime.png \
vservers.png

EXTRA_DIST = \
$(adminstatic_DATA)
