## Cherokee: Makefile.am  -*- makefile -*-

THIRD_PARTY = \
jquery.easing.js \
jquery.accordion.js \
jquery-1.2.3.min.js \
jquery.dimensions.js \
jquery.tablednd.js \
thickbox.js

adminstaticdir = "$(datadir)/cherokee/admin/static/js"
adminstatic_DATA = \
$(THIRD_PARTY) \
common.js \
icons.js

EXTRA_DIST = \
$(adminstatic_DATA)
