## Cherokee: Makefile.am  -*- makefile -*-

THIRD_PARTY = \
jquery-1.3.2.min.js \
ui.core.js \
ui.tabs.js \
ui.draggable.js \
ui.resizable.js \
ui.dialog.js \
jquery.cookie.js \
jquery.easing.js \
jquery.dimensions.js \
jquery.tablednd.js \
jquery.form-defaults.js \
jquery.ibutton.js \
thickbox.js

adminstaticdir = "$(datadir)/cherokee/admin/static/js"
adminstatic_DATA = \
$(THIRD_PARTY) \
common.js \
icons.js \
graphs.js \
wizards.js

EXTRA_DIST = \
$(adminstatic_DATA)
