## Cherokee: Makefile.am  -*- makefile -*-

jsdir = "$(datadir)/cherokee/admin/CTK/static/js"
js_DATA = \
Help.js \
Submitter.js \
StarRating.js \
common.js \
jquery-1.3.2.min.js \
jquery-1.3.2.js \
jquery-ui-1.7.2.custom.min.js \
jquery-ui-1.7.2.js \
jquery.cookie.js \
jquery.form-defaults.js \
jquery.ibutton.js \
jquery.tablednd_0_5.js \
jquery.uploadProgress.js \
ajaxupload.3.6.js \
Carousel.js

EXTRA_DIST = \
$(js_DATA)
