## Cherokee: Makefile.am  -*- makefile -*-

otherdir = "$(datadir)/cherokee/admin/static/images/other"
other_DATA = \
contact-bug.png \
contact-list.png \
facebook.png \
linkedin.png \
irc.png \
latest.png \
left.png \
octality-logo.png \
proud.png \
right.png \
twitter.png \
web.png

EXTRA_DIST = \
$(other_DATA)
