## Cherokee: Makefile.am  -*- makefile -*-

otherdir = "$(datadir)/cherokee/admin/static/images/other"
other_DATA = \
contact-bug.png \
contact-list.png \
facebook.png \
googleplus.png \
github.png \
linkedin.png \
irc.png \
latest.png \
left.png \
proud.png \
right.png \
twitter.png \
web.png

EXTRA_DIST = \
$(other_DATA)
