## Cherokee: Makefile.am  -*- makefile -*-

wizardsdir = "$(datadir)/cherokee/admin/static/images/wizards"
wizards_DATA = \
alfresco.png \
aspnet.png \
common_static.png \
dbslayer.png \
django.png \
drupal.png \
glassfish.png \
hotlinking.png \
icons.png \
joomla.png \
liferay.png \
mailman.png \
moodle.png \
nagios.png \
phpbb.png \
php.jpg \
phpmyadmin.png \
redirect.jpg \
ror.png \
rtorrent.png \
streaming.png \
sugarcrm.png \
symfony.png \
trac.png \
wordpress.png \
zend.png \
uwsgi.png \
mono.png \
coldfusion.png

EXTRA_DIST = \
$(wizards_DATA)
