## Cherokee: Makefile.am  -*- makefile -*-

wizardsdir = "$(datadir)/cherokee/admin/static/images/wizards"
wizards_DATA = \
alfresco.png \
aspnet.png \
coldfusion.png \
common_static.png \
concrete5.png \
dbslayer.png \
django.png \
drupal.png \
gallery.png \
glassfish.png \
hotlinking.png \
icons.png \
joomla.png \
liferay.png \
mailman.png \
moinmoin.png \
mono.png \
moodle.png \
nagios.png \
phpbb.png \
php.jpg \
phpmyadmin.png \
redirect.jpg \
ror.png \
rtorrent.png \
streaming.png \
sugarcrm.png \
symfony.png \
trac.png \
uwsgi.png \
wordpress.png \
zend.png

EXTRA_DIST = \
$(wizards_DATA)
