## Cherokee: Makefile.am  -*- makefile -*-

wizardsdir = "$(datadir)/cherokee/admin/static/images/wizards"
wizards_DATA = \
alfresco.png \
aspnet.png \
coldfusion.png \
concrete5.png \
dbslayer.png \
django.png \
drupal.png \
flcache.png \
gallery.png \
glassfish.png \
hotlinking.png \
icons.png \
joomla.png \
liferay.png \
mailman.png \
mediawiki.png \
moinmoin.png \
mono.png \
moodle.png \
nagios.png \
php.png \
phpbb.png \
phpmyadmin.png \
rails.png \
redirect.png \
rtorrent.png \
ssl_test.png \
static.png \
streaming.png \
sugar.png \
symfony.png \
trac.png \
uwsgi.png \
wordpress.png \
zend.png

EXTRA_DIST = \
$(wizards_DATA)
